--- a/index.html
+++ b/index.html
@@ -9,38 +9,72 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <div class="continer">
-<svg class="icon" xmlns="http://www.w3.org/2000/svg" width="40" height="41" fill="none" viewBox="0 0 40 41"><path fill="#AD28EB" d="M37.5 20.5a2.467 2.467 0 0 1-1.64 2.344l-9.913 3.604-3.603 9.911a2.5 2.5 0 0 1-4.688 0l-3.604-9.922-9.911-3.593a2.5 2.5 0 0 1 0-4.688l9.921-3.604 3.594-9.911a2.5 2.5 0 0 1 4.688 0l3.604 9.921 9.911 3.594A2.467 2.467 0 0 1 37.5 20.5Z"/></svg>
-<h1 id="title"> FAQs</h1><br>
-<div class="item-a">
-  <h3 class="q1"> What is Frontend Mentor, and how will it help me?</h3>
-  <button id="button1" >
-<svg id="plus1" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#AD28EB" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"/></svg>
-<svg id="mins1" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#301534" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"/></svg>
-  </button>
-  <div id="a1"> Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.</div><hr>
-  <h3 class="q2"> Is Frontend Mentor free?</h3><button id="button2">
-    <svg id="plus2" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#AD28EB" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"/></svg>
-<svg id="mins2" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#301534" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"/></svg>
-  </button>
-  <div id="a2">  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-    option providing access to a range of projects suitable for all skill levels.</div><hr>
-  <h3 class="q3">  Can I use Frontend Mentor projects in my portfolio?</h3><button id="button3">
-    <svg id="plus3" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#AD28EB" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"/></svg>
-<svg id="mins3" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#301534" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"/></svg>
-  </button>
-  <div id="a3"> Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-    way to showcase your skills to potential employers!</div><hr>
-  <h3 class="q4">  How can I get help if I'm stuck on a challenge?</h3><button id="button4">
-    <svg id="plus4" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#AD28EB" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z"/></svg>
-<svg id="mins4" xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31"><path fill="#301534" d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.2 12.2 0 0 0 15 3.312Zm4.688 13.124h-9.375a.938.938 0 0 1 0-1.875h9.374a.938.938 0 0 1 0 1.876Z"/></svg>
-  </button>
-  <div id="a4">  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.</div>
-</div>
+<div class="container">
+  <div class="head">
+    <img src="assets/images/icon-star.svg" alt="star-icons">
+  <h2>
+  FAQs
+  </h2>
   </div>
+  <div class="FAQ">
+    <div class="Q q1">
+      <h4>
+  What is Frontend Mentor, and how will it help me?
+      </h4>
+      <button type="button" id="button1">
+      <img class="plus" id="p1" src="assets/images/icon-plus.svg" alt="plus icon">
+      <img class="minus" id="m1" src="assets/images/icon-minus.svg" alt="minus icon">
+      </button>
+    </div>
+    <div id="a1">
+  Frontend Mentor offers realistic coding challenges to help developers improve their 
+  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+  all levels and ideal for portfolio building.
+    </div></div><hr>
+  <div class="FAQ">
+    <div class="Q q2">
+      <h4>
+  Is Frontend Mentor free?
+      </h4>
+      <button type="button" id="button2">
+      <img class="plus" id="p2" src="assets/images/icon-plus.svg" alt="plus icon">
+      <img class="minus" id="m2" src="assets/images/icon-minus.svg" alt="minus icon">
+      </button>
+    </div>
+    <div id="a2">
+  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+  option providing access to a range of projects suitable for all skill levels.
+    </div></div><hr>
+  <div class="FAQ">
+    <div class="Q q3">
+      <h4>
+  Can I use Frontend Mentor projects in my portfolio?
+      </h4>
+      <button type="button" id="button3">
+      <img class="plus" id="p3" src="assets/images/icon-plus.svg" alt="plus icon">
+      <img class="minus" id="m3" src="assets/images/icon-minus.svg" alt="minus icon">
+      </button>
+    </div>
+    <div id="a3">
+Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+  way to showcase your skills to potential employers!
+    </div></div><hr>
+  <div class="FAQ">
+    <div class="Q q4">
+      <h4>
+    How can I get help if I'm stuck on a Frontend Mentor challenge?
+      </h4>
+      <button type="button" id="button4">
+      <img class="plus" id="p4" src="assets/images/icon-plus.svg" alt="plus icon">
+      <img class="minus" id="m4" src="assets/images/icon-minus.svg" alt="minus icon">
+      </button>
+    </div>
+    <div id="a4">
+  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+  channel where you can ask questions and seek support from other community members.
+    </div>
+  </div>
+</div>
   <script src="new.js"></script> 
 </body>
 </html>
